fixed 'className' errors, and changed font size for responsiveness on iphone

--- a/client/src/components/Gems/Gems.css
+++ b/client/src/components/Gems/Gems.css
@@ -62,7 +62,7 @@ button {
 
 @media only screen and (max-width: 600px) {
   .card {
-    font-size: 13px;
+    font-size: 11px;
     margin: 0px !important;
     margin-bottom: 10px !important;
   }
